# try_slog_serde_derive

./: Cargo.toml
src/: main.rs
